--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,21 +11,21 @@ repository = "https://github.com/neovide/neovide"
 readme = "README.md"
 keywords = ["neovim", "nvim", "gui"]
 exclude = [
-    "website/*",
-    "ubuntu-builder/*",
-    "wix/*",
-    "macos-builder/*",
-    ".vscode/**/*",
-    ".github/**/*",
-    "assets/dmg-background/**/*",
-    "assets/neovide-*.png",
-    "assets/neovide.svg",
-    "*.md",
-    "scripts/*.sh",
-    "docs/*",
-    "target/*",
-    ".gitignore",
-    "stylua.toml",
+  "website/*",
+  "ubuntu-builder/*",
+  "wix/*",
+  "macos-builder/*",
+  ".vscode/**/*",
+  ".github/**/*",
+  "assets/dmg-background/**/*",
+  "assets/neovide-*.png",
+  "assets/neovide.svg",
+  "*.md",
+  "scripts/*.sh",
+  "docs/*",
+  "target/*",
+  ".gitignore",
+  "stylua.toml",
 ]
 
 [workspace]
@@ -42,7 +42,7 @@ tracy-context-switch-tracing = ["tracy-client-sys?/context-switch-tracing"]
 tracy-sampling = ["tracy-client-sys?/sampling"]
 tracy-code-transfer = ["tracy-client-sys?/code-transfer"]
 tracy-callstack-inlines = ["tracy-client-sys?/callstack-inlines"]
-d3d_debug = [] # Enable the D3D debug layer
+d3d_debug = []                                                              # Enable the D3D debug layer
 
 [dependencies]
 anyhow = { version = "1.0.95", features = ["backtrace"] }
@@ -50,15 +50,21 @@ approx = "0.5.1"
 async-trait = "0.1.83"
 backtrace = "0.3.74"
 clap = { version = "4.5.23", features = ["cargo", "derive", "env", "color"] }
+rustc-hash = "2.0.0"
 copypasta = "0.10.2"
+csscolorparser = "0.7.0"
 derive-new = "0.7.0"
 dirs = "6.0.0"
 flexi_logger = { version = "0.31.2", default-features = false }
 futures = "0.3.31"
 gl = "0.14.0"
+# glutin = "0.32.3"
+# glutin = { path = "/Users/falcucci/clones/glutin/glutin" }
+glutin = { git = "https://github.com/falcucci/glutin.git", branch = "push-xrrtsqrvolsy" }
+# glutin-winit = "0.5.0"
+# glutin-winit = { path = "/Users/falcucci/clones/glutin/glutin-winit" }
+glutin-winit = { git = "https://github.com/falcucci/glutin.git", branch = "push-xrrtsqrvolsy" }
 glamour = { version = "0.18.0", features = ["serde"] }
-glutin = "0.32.3"
-glutin-winit = "0.5.0"
 image = { version = "0.25.5", default-features = false, features = ["ico"] }
 indoc = "2.0.5"
 itertools = "0.14.0"
@@ -75,20 +81,27 @@ rmpv = "1.3.0"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
 spin_sleep = "1.3.0"
+unicode-segmentation = "1.12.0"
+which = "7.0.1"
+# winit = { version = "=0.30.12", features = ["serde"] }
+# winit = { path = "/Users/falcucci/clones/winit", features = ["serde"] }
+winit = { git = "https://github.com/falcucci/winit.git", branch = "push-wtqsvrykkkrx", features = [
+  "serde",
+] }
+regex = "1.11.1"
 strum = { version = "0.27.2", features = ["derive"] }
-swash = { version = "0.2.1", default-features = false, features = [ "std"  ] }
+swash = { version = "0.2.1", default-features = false, features = ["std"] }
 time = { version = "0.3.37", features = ["macros", "formatting"] }
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-util = { version = "0.7.13", features = ["compat"] }
 toml = "0.9.5"
 tracy-client-sys = { version = "0.26.1", optional = true, default-features = false, features = [
-    "broadcast",
-    "delayed-init",
-    "enable",
-    "manual-lifetime",
-    "fibers",
+  "broadcast",
+  "delayed-init",
+  "enable",
+  "manual-lifetime",
+  "fibers",
 ] }
-winit = { version = "=0.30.12", features = ["serde"] }
 xdg = "3.0.0"
 
 [dev-dependencies]
@@ -96,73 +109,78 @@ scoped-env = "2.1.0"
 serial_test = "3.2.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
+wslpath-rs = "0.2"
 skia-safe = { version = "0.89.1", features = ["gl", "d3d", "textlayout"] }
 # This needs to match the version used by skia
 windows = { version = "0.62.0", features = [
-    "Win32_Graphics_Direct3D",
-    "Win32_Graphics_Direct3D12",
-    "Win32_Graphics_DirectComposition",
-    "Win32_Graphics_Dwm",
-    "Win32_Graphics_Dxgi",
-    "Win32_Graphics_Dxgi_Common",
-    "Win32_Security",
-    "Win32_System_Console",
-    "Win32_System_Performance",
-    "Win32_System_Threading",
-    "Win32_UI_HiDpi",
+  "Win32_Graphics_Direct3D",
+  "Win32_Graphics_Direct3D12",
+  "Win32_Graphics_DirectComposition",
+  "Win32_Graphics_Dwm",
+  "Win32_Graphics_Dxgi",
+  "Win32_Graphics_Dxgi_Common",
+  "Win32_Security",
+  "Win32_System_Console",
+  "Win32_System_Performance",
+  "Win32_System_Threading",
+  "Win32_UI_HiDpi",
 ] }
 windows-registry = "0.6.1"
-wslpath-rs = "0.2"
-
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc2 = "0.6.1"
 objc2-core-foundation = { version = "0.3.1", default-features = false, features = [
-    "CFCGTypes",
+  "CFCGTypes",
 ] }
 objc2-foundation = { version = "0.3.1", default-features = false, features = [
-    "std",
-    "NSUserDefaults",
-    "NSProcessInfo",
+  "std",
+  "NSUserDefaults",
+  "NSTimer",
+  "NSProcessInfo",
 ] }
 objc2-app-kit = { version = "0.3.1", default-features = false, features = [
-    "std",
-    "objc2-core-foundation",
-    "objc2-quartz-core",
-    "NSResponder",
-    "NSEvent",
-    "NSView",
-    "NSWindow",
-    "NSScreen",
-    "NSApplication",
-    "NSMenu",
-    "NSMenuItem",
-    "NSLayoutConstraint",
-    "NSColor",
-    "NSColorSpace",
-    "NSImage",
-    "NSGraphics",
+  "std",
+  "block2",
+  "NSLayoutConstraint",
+  "NSColorSpace",
+  "NSGraphics",
+  "NSWindowTabGroup",
+  "objc2-core-foundation",
+  "objc2-quartz-core",
+  "NSResponder",
+  "NSEvent",
+  "NSView",
+  "NSWindow",
+  "NSScreen",
+  "NSApplication",
+  "NSMenu",
+  "NSMenuItem",
+  "NSLayoutConstraint",
+  "NSColor",
+  "NSColorSpace",
+  "NSImage",
+  "NSGraphics",
 ] }
 objc2-quartz-core = { version = "0.3.1", default-features = false, features = [
-    "std",
-    "objc2-core-foundation",
-    "objc2-metal",
-    "CALayer",
-    "CAMetalLayer",
+  "std",
+  "objc2-core-foundation",
+  "objc2-metal",
+  "CALayer",
+  "CAMetalLayer",
 ] }
 objc2-core-video = { version = "0.3.1", default-features = false, features = [
-    "objc2-core-graphics",
-    "CVBase",
-    "CVReturn",
-    "CVDisplayLink",
+  "objc2-core-graphics",
+  "CVBase",
+  "CVReturn",
+  "CVDisplayLink",
 ] }
 objc2-core-graphics = { version = "0.3.1", default-features = false, features = [
-    "CGDirectDisplay",
+  "CGDirectDisplay",
 ] }
 objc2-metal = { version = "0.3.1", default-features = false, features = [
-    "std",
-    "MTLCommandQueue",
-    "MTLCommandBuffer",
+  "std",
+  "MTLCommandQueue",
+  "MTLCommandBuffer",
 ] }
 skia-safe = { version = "0.89.1", features = ["metal", "gl", "textlayout"] }
 uzers = "0.12.1"
